--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,30 @@ body ul {
 .works-list .item + .item {
   margin-left: 30px;
 }
+.works-list .thumb{
+  position: relative;
+}
+.works-list .overlay{
+  position: absolute;
+  bottom: 0;
+  left: 0;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.works-list-text{
+  color: var(--font-white);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;  
+}
 .team-section {
   background: var(--background-gray);
 }
@@ -313,6 +336,7 @@ body ul {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
+
 .team-container {
   padding-top: 30px;
   padding-bottom: 30px;
