--- a/css/styles.css
+++ b/css/styles.css
@@ -590,6 +590,7 @@ body ul {
 
 .products .thumb{
   position: relative;
+  overflow: hidden;
 }
 
 .products .overlay{
@@ -599,9 +600,31 @@ body ul {
 
   width: 100%;
   height: 100%;
+  padding-top: 63px;
+  padding-bottom: 63px;
+  padding-right: 24px;
+  padding-left: 24px;
 
   background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translate(0%, 100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.products .overlay p{
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+}
+
+.products a:hover .overlay,
+.products a:focus .overlay{
+  transform: translate(0%, 0%);
+}
+
 .products-title {
   margin-bottom: 4px;
 
