--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,8 @@ body ul {
 }
 
 .navigation-links a {
+  position: relative;
+
   display: inline-block;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -126,6 +128,24 @@ body ul {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-links .is-active{
+  color: var(--font-blue);  
+}
+
+.navigation-links .is-active::before{
+  content: "";
+  position: absolute;
+  bottom: calc(0% - 25px);
+  left: 0px;
+
+
+  width: 100%;
+  height: 4px;
+  background-color: var(--font-blue);
+  border-radius: 2px;
+  display: block;
 }
 
 .header-contacts {
@@ -156,6 +176,7 @@ body ul {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .icon-envelope {
   margin-right: 10px;
