--- a/css/styles.css
+++ b/css/styles.css
@@ -661,3 +661,50 @@ body ul {
   line-height: 1.87;
   color: var(--font-gray);
 }
+
+/* модальное окно */
+
+.modal-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color:rgba(0, 0, 0, 0.2);
+}
+
+.modal-window{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 528px;
+  height: 581px;
+
+  background-color: #fff;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
+}
+
+.modal-close-button{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  border-radius: 50%  ;
+
+  width: 30px;
+  height: 30px;
+}
+
+.is-hidden{
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: unset;
+}
