--- a/css/styles.css
+++ b/css/styles.css
@@ -695,12 +695,14 @@ body ul {
   top: 8px;
   right: 8px;
 
-  border: 1px solid rgba(0, 0, 0, 0.1);
-
-  border-radius: 50%  ;
-
+  display: flex;  
   width: 30px;
   height: 30px;
+  justify-content: center;
+  align-items: center;
+  
+  border-radius: 50%  ;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .is-hidden{
