--- a/css/styles.css
+++ b/css/styles.css
@@ -704,8 +704,9 @@ body ul {
   justify-content: center;
   align-items: center;
   
-  border-radius: 50%  ;
+  border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 .is-hidden{
